Fixes :after z-index bug

--- a/layout/_flow-nav.scss
+++ b/layout/_flow-nav.scss
@@ -35,7 +35,7 @@
     left: 0;
     width: 100%;
     height: 1px;
-    z-index: 1;
+    z-index: -1;
     background: map-deep-get($ui, "dark", light);
   }
 }
@@ -45,6 +45,7 @@
   flex-direction: row;
   display: flex;
   z-index: 2;
+  position: relative;
   @extend %scrollable-content-x;
   flex: 1;
 }
